# tetrapol-kit

./: .gitignore  CMakeLists.txt  README  TODO  piny_env.sh  sysop_env.sh
apps/: CMakeLists.txt  tetrapol_dump.c
demod/: Makefile  constants.h  demod.py  frame.h  misc.c  misc.h  multiblock.c  multiblock.h  radio.c  radio.h  tetrapol.c  tetrapol.h  tetrapol_cli.py  tetrapol_cli_auto_tune.py  tetrapol_cli_output_enabled.py  tetrapol_cli_pwr.py  tetrapol_framing_err.py  tetrapol_multi_rx.py  tetrapol_rx.py  tpdu.c  tpdu.h  tsdu.c  tsdu.h
doc/: och-rfsi.txt
lib/: CMakeLists.txt  Makefile  addr.c  addr.h  bch.c  bch.h  bit_utils.c  bit_utils.h  data_block.c  data_block.h  data_frame.c  data_frame.h  decoded_frame.c  decoded_frame.h  frame.h  hdlc_frame.c  hdlc_frame.h  log.c  log.h  misc.c  misc.h  multiblock.c  multiblock.h  pch.c  pch.h  phys_ch.c  phys_ch.h  radio.c  radio.h  rch.c  rch.h  sdch.c  sdch.h  system_config.h  test_bit_utils.c  test_data_block.c  test_data_frame.c  test_decoded_frame.c  test_hdlc_frame.c  test_phys_ch.c  (+9 more)
lib/tetrapol/: addr.h  bch.h  bit_utils.h  data_frame.h  hdlc_frame.h  log.h  misc.h  pch.h  phys_ch.h  rch.h  sdch.h  system_config.h  tetrapol.h  timer.h  tpdu.h  tsdu.h
misc/: codop.sed  codop.txt  crc.c  fcs.py  fcs_data.py  fn.txt  forward.c  stuff.c  stuff.sed  stuff.txt  system_info.txt
proto/: tetrapol_kit_io.proto
